--- a/lp-portfolio/package.json
+++ b/lp-portfolio/package.json
@@ -27,5 +27,9 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "unsplash-js": "^7.0.18"
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
+    "react-scroll": "^1.8.9"
   }
 }
