--- a/Chousei/package.json
+++ b/Chousei/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -16,6 +20,7 @@
     "axios": "^1.4.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "font-awesome": "^4.7.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
